@@ -189,4 +189,8 @@ S3method(layout.svd, bgraph)
 S3method(layout.mds, bgraph)
 export(layout.mds, layout.svd)
 
+# arpack
+
+export(arpack)
+
 ######################## REST IS GENERATED BY stimulus
