@@ -23,3 +23,15 @@
 igraph.arpack.default <- list(bmat="I", n=0, which="XX", nev=1, tol=0.0,
                               ncv=3, ldv=0, ishift=1, maxiter=3000, nb=1,
                               mode=1, start=0, sigma=0.0, sigmai=0.0)
+
+arpack <- function(func, extra=NULL, sym=FALSE, options=igraph.arpack.default,
+                   env=parent.frame()) {
+
+  options.tmp <- igraph.arpack.default
+  options.tmp[ names(options) ] <- options
+  options <- options.tmp
+
+  .Call("R_igraph_arpack", func, extra, options, env, sym,
+        PACKAGE="igraph")
+
+}
