@@ -6350,6 +6350,96 @@ SEXP R_igraph_get_adjedgelist(SEXP graph, SEXP pmode) {
   return result;
 } 
 
+typedef struct R_igraph_i_arpack_data_t {
+  SEXP fun;
+  SEXP extra;
+  SEXP rho;
+} R_igraph_i_arpack_data_t;
+
+int R_igraph_i_arpack_callback(igraph_real_t *to, const igraph_real_t *from,
+			       long int n, void *extra) {
+  SEXP s_from, s_to;
+  SEXP R_fcall;
+  R_igraph_i_arpack_data_t *data=extra;
+
+  PROTECT(s_from=NEW_NUMERIC(n));
+  memcpy(REAL(s_from), from, sizeof(igraph_real_t)*n);
+  
+  PROTECT(R_fcall = lang3(data->fun, s_from, data->extra));
+  PROTECT(s_to = eval(R_fcall, data->rho));
+  memcpy(to, REAL(s_to), sizeof(igraph_real_t)*n);
+  
+  UNPROTECT(3);
+  return 0;
+}
+
+SEXP R_igraph_arpack(SEXP function, SEXP extra, SEXP options, SEXP rho,
+		     SEXP sym) {
+  
+  igraph_vector_t values;
+  igraph_matrix_t vectors, values2;
+  R_igraph_i_arpack_data_t data;
+  igraph_arpack_options_t c_options;
+  SEXP result, names;
+
+  R_igraph_before();
+
+  if (0 != igraph_matrix_init(&vectors, 0, 0)) {
+    igraph_error("Cannot run ARPACK", __FILE__, __LINE__, IGRAPH_ENOMEM);
+  }
+  IGRAPH_FINALLY(igraph_matrix_destroy, &vectors);
+  if (LOGICAL(sym)[0]) {
+    if (0 != igraph_vector_init(&values, 0)) {
+      igraph_error("Cannot run ARPACK", __FILE__, __LINE__, IGRAPH_ENOMEM);
+    }
+    IGRAPH_FINALLY(igraph_vector_destroy, &values);
+  } else {
+    if (0 != igraph_matrix_init(&values2, 0, 0)) {
+      igraph_error("Cannot run ARPACK", __FILE__, __LINE__, IGRAPH_ENOMEM);
+    }
+    IGRAPH_FINALLY(igraph_matrix_destroy, &values2);
+  }
+  
+  data.fun=function;
+  data.extra=extra;
+  data.rho=rho;
+  
+  R_SEXP_to_igraph_arpack_options(options, &c_options);
+  if (LOGICAL(sym)[0]) {
+    if (0 != igraph_arpack_rssolve(R_igraph_i_arpack_callback, &data,
+				   &c_options, 0, &values, &vectors)) {
+      igraph_error("ARPACK failed", __FILE__, __LINE__, IGRAPH_FAILURE);
+    }
+  } else {
+    if (0 != igraph_arpack_rnsolve(R_igraph_i_arpack_callback, &data,
+				   &c_options, 0, &values2, &vectors)) {
+      igraph_error("ARPACK failed", __FILE__, __LINE__, IGRAPH_FAILURE);
+    }
+  }    
+
+  PROTECT(result=NEW_LIST(3));
+  if (LOGICAL(sym)[0]) {
+    SET_VECTOR_ELT(result, 0, R_igraph_vector_to_SEXP(&values));
+    igraph_vector_destroy(&values); IGRAPH_FINALLY_CLEAN(1);
+  } else {
+    SET_VECTOR_ELT(result, 0, R_igraph_matrix_to_SEXP(&values2));
+    igraph_matrix_destroy(&values2); IGRAPH_FINALLY_CLEAN(1);
+  }    
+  SET_VECTOR_ELT(result, 1, R_igraph_matrix_to_SEXP(&vectors));
+  igraph_matrix_destroy(&vectors); IGRAPH_FINALLY_CLEAN(1);
+  SET_VECTOR_ELT(result, 2, R_igraph_arpack_options_to_SEXP(&c_options));
+  PROTECT(names=NEW_CHARACTER(3));
+  SET_STRING_ELT(names, 0, mkChar("values"));
+  SET_STRING_ELT(names, 1, mkChar("vectors"));
+  SET_STRING_ELT(names, 2, mkChar("options"));
+  SET_NAMES(result, names);
+
+  R_igraph_after();
+  
+  UNPROTECT(2);
+  return result;
+}
+
 SEXP R_igraph_revolver_d(SEXP graph, SEXP pniter, SEXP psd, SEXP pnorm,
 			SEXP pcites, SEXP pexpected, SEXP perror, SEXP pdebug,
 			SEXP verbose) {
